fixed u and v initialization

--- a/PMF_messy.ipynb
+++ b/PMF_messy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data: https://www.kaggle.com/rounakbanik/the-movies-dataset/download\n",
     "ratings = pd.read_csv('../data/the-movies-dataset/ratings_small.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -57,16 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reference: https://sandipanweb.wordpress.com/2017/04/04/probabilistic-matrix-factorization-with-a-generative-model-in-python/\n",
     "class PMF:\n",
     "    def __init__(self, k, prior_mean=0, prior_std=1, epochs=10):\n",
     "        self.k = k\n",
     "        self.prior_mean = prior_mean\n",
     "        self.prior_std = prior_std\n",
     "        self.epochs = epochs\n",
+    "        self.u = None\n",
+    "        self.v = None\n",
     "        \n",
     "    def fit(self, data):\n",
     "        ratings = data\n",
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,99 +128,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSE of Epoch 0: 11.13010025024414\n",
-      "MSE of Epoch 1: 0.988913357257843\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.fit(ratings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Defining Parameters/Hyperparameters\n",
-    "I = ratings.userId.nunique()\n",
-    "J = ratings.movieId.nunique()\n",
-    "data_var = ratings['rating'].var(axis=0)\n",
-    "k = 3\n",
-    "mean = 0\n",
-    "std = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u = pyro.sample(\"user_factor\", pyro.distributions.Normal(mean, std), sample_shape=torch.Size([I,k]))\n",
-    "v = pyro.sample(\"movie_factor\", pyro.distributions.Normal(mean, std), sample_shape=torch.Size([J,k]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_to_movie_dict = {}\n",
-    "movie_to_user_dict = {}\n",
-    "\n",
-    "for i in range(I):\n",
-    "    user_to_movie_dict[i] = ratings[ratings['new_user_index']==i]['new_movie_index'].tolist()\n",
-    "for j in range(J):\n",
-    "    movie_to_user_dict[j] = ratings[ratings['new_movie_index']==j]['new_user_index'].tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "110.70313000679016\n",
-      "106.21870613098145\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Update of all u_i: Takes 110.70313000679016 seconds\n",
-    "for i in range(len(u)):\n",
-    "    v_sum = 0\n",
-    "    mv_sum = 0\n",
-    "    for j in user_to_movie_dict[i]:\n",
-    "        v_sum += np.outer(v[j],v[j])\n",
-    "        mv_sum += float(ratings[(ratings['new_user_index']==i) & (ratings['new_movie_index']==j)].rating) * v[j]\n",
-    "    u[i] = torch.from_numpy(np.dot(inv(std * data_var * np.identity(k) + v_sum), mv_sum))\n",
-    "\n",
-    "# Update of all v_j: Takes 106.21870613098145 seconds\n",
-    "for j in range(len(v)):\n",
-    "    u_sum = 0\n",
-    "    mu_sum = 0\n",
-    "    for i in movie_to_user_dict[j]:\n",
-    "        u_sum += np.outer(u[i],u[i])\n",
-    "        mu_sum += float(ratings[(ratings['new_user_index']==i) & (ratings['new_movie_index']==j)].rating) * u[i]\n",
-    "    v[j] = torch.from_numpy(np.dot(inv(std * data_var * np.identity(k) + u_sum), mu_sum))\n",
-    "\n",
-    "M_prime = torch.mm(u,v.T)\n",
-    "error = 0\n",
-    "for i in range(len(u)):\n",
-    "    for j in user_to_movie_dict[i]:\n",
-    "        error += (float(ratings[(ratings['new_user_index']==i) & (ratings['new_movie_index']==j)].rating) - M_prime[i][j])**2\n",
-    "print('MSE is of Epoch ' + str(epoch_num) + ': ' + str(float(error/len(ratings))))"
    ]
   }
  ],
