update: new features and model

--- a/gaussian-mixture-model_test.ipynb
+++ b/gaussian-mixture-model_test.ipynb
@@ -1770,8 +1770,15 @@
     "    \n",
     "    \"\"\"3 clusters\"\"\"\n",
     "    weights = pyro.param('weights', torch.FloatTensor([0.5]), constraint=constraints.unit_interval)\n",
-    "    scales = pyro.param('scales', torch.tensor([[[1., 0.], [0., 2.]], [[2., 0.], [0., 2.]], [[3., 0.], [0., 3.]]]), constraint=constraints.positive)\n",
     "    locs = pyro.param('locs', torch.tensor([[0., 20.], [20., 0.], [10., 10.]]))\n",
+    "    scales = pyro.param('scales', torch.tensor(\n",
+    "        [[[1., 0.], \n",
+    "          [0., 2.]], \n",
+    "         [[2., 0.], \n",
+    "          [0., 2.]], \n",
+    "         [[3., 0.], \n",
+    "          [0., 3.]]]), constraint=constraints.positive)\n",
+    "\n",
     "\n",
     "    with pyro.iarange('data', data.size(0)):\n",
     "        # Local variables.\n",
