--- a/movie_metadata_process.ipynb
+++ b/movie_metadata_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 49,
    "metadata": {
     "scrolled": false
    },
@@ -540,7 +540,7 @@
        "[45466 rows x 24 columns]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change budget to numeric\n",
+    "movies_metadata['budget'] = pd.to_numeric(movies_metadata['budget'], errors='coerce')\n",
+    "\n",
+    "# Rescale budget and revenue to millions\n",
+    "SCALE = 10 ** 6 \n",
+    "movies_metadata['revenue_mil'] = movies_metadata['revenue'] / SCALE\n",
+    "movies_metadata['budget_mil'] = movies_metadata['budget'] / SCALE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,15 +616,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done with overviews in: 3.9075980186462402\n",
-      "Done with tagline in: 4.42809796333313\n"
+      "Done with overviews in: 3.861361026763916\n",
+      "Done with tagline in: 4.369884014129639\n"
      ]
     }
    ],
@@ -634,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -694,6 +709,8 @@
        "      <th>runtime</th>\n",
        "      <th>vote_average</th>\n",
        "      <th>vote_count</th>\n",
+       "      <th>revenue_mil</th>\n",
+       "      <th>budget_mil</th>\n",
        "      <th>drama</th>\n",
        "      <th>comedy</th>\n",
        "      <th>thriller</th>\n",
@@ -721,6 +738,8 @@
        "      <td>81.0</td>\n",
        "      <td>7.7</td>\n",
        "      <td>5415.0</td>\n",
+       "      <td>373.554033</td>\n",
+       "      <td>30.00</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -746,6 +765,8 @@
        "      <td>104.0</td>\n",
        "      <td>6.9</td>\n",
        "      <td>2413.0</td>\n",
+       "      <td>262.797249</td>\n",
+       "      <td>65.00</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -771,6 +792,8 @@
        "      <td>127.0</td>\n",
        "      <td>6.1</td>\n",
        "      <td>34.0</td>\n",
+       "      <td>81.452156</td>\n",
+       "      <td>16.00</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -796,6 +819,8 @@
        "      <td>170.0</td>\n",
        "      <td>7.7</td>\n",
        "      <td>1886.0</td>\n",
+       "      <td>187.436818</td>\n",
+       "      <td>60.00</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -821,6 +846,8 @@
        "      <td>106.0</td>\n",
        "      <td>5.5</td>\n",
        "      <td>174.0</td>\n",
+       "      <td>64.350171</td>\n",
+       "      <td>35.00</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -859,6 +886,8 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5376</td>\n",
@@ -871,6 +900,8 @@
        "      <td>185.0</td>\n",
        "      <td>6.9</td>\n",
        "      <td>25.0</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>12.00</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -896,6 +927,8 @@
        "      <td>0.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>0.75</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -921,6 +954,8 @@
        "      <td>100.0</td>\n",
        "      <td>5.8</td>\n",
        "      <td>6.0</td>\n",
+       "      <td>1.328612</td>\n",
+       "      <td>0.80</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -946,6 +981,8 @@
        "      <td>107.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>1.268793</td>\n",
+       "      <td>2.00</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -971,6 +1008,8 @@
        "      <td>91.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.413000</td>\n",
+       "      <td>5.00</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -987,7 +1026,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5381 rows × 22 columns</p>\n",
+       "<p>5381 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1004,49 +1043,62 @@
        "5379                      1   2000000   63281         Про любоff   0.121844   \n",
        "5380                      1   5000000   63898           Антидурь   0.039793   \n",
        "\n",
-       "          revenue  runtime  vote_average  vote_count  drama  comedy  thriller  \\\n",
-       "0     373554033.0     81.0           7.7      5415.0      0       1         0   \n",
-       "1     262797249.0    104.0           6.9      2413.0      0       0         0   \n",
-       "2      81452156.0    127.0           6.1        34.0      1       1         0   \n",
-       "3     187436818.0    170.0           7.7      1886.0      1       0         1   \n",
-       "4      64350171.0    106.0           5.5       174.0      0       0         1   \n",
-       "...           ...      ...           ...         ...    ...     ...       ...   \n",
-       "5376   19000000.0    185.0           6.9        25.0      1       1         0   \n",
-       "5377          3.0      0.0           6.0         4.0      0       1         0   \n",
-       "5378    1328612.0    100.0           5.8         6.0      1       1         0   \n",
-       "5379    1268793.0    107.0           4.0         3.0      1       0         0   \n",
-       "5380    1413000.0     91.0           1.0         1.0      0       1         0   \n",
+       "          revenue  runtime  vote_average  vote_count  revenue_mil  budget_mil  \\\n",
+       "0     373554033.0     81.0           7.7      5415.0   373.554033       30.00   \n",
+       "1     262797249.0    104.0           6.9      2413.0   262.797249       65.00   \n",
+       "2      81452156.0    127.0           6.1        34.0    81.452156       16.00   \n",
+       "3     187436818.0    170.0           7.7      1886.0   187.436818       60.00   \n",
+       "4      64350171.0    106.0           5.5       174.0    64.350171       35.00   \n",
+       "...           ...      ...           ...         ...          ...         ...   \n",
+       "5376   19000000.0    185.0           6.9        25.0    19.000000       12.00   \n",
+       "5377          3.0      0.0           6.0         4.0     0.000003        0.75   \n",
+       "5378    1328612.0    100.0           5.8         6.0     1.328612        0.80   \n",
+       "5379    1268793.0    107.0           4.0         3.0     1.268793        2.00   \n",
+       "5380    1413000.0     91.0           1.0         1.0     1.413000        5.00   \n",
        "\n",
-       "      action  romance  adventure  family  release_2010s  release_2000s  \\\n",
-       "0          0        0          0       1              0              0   \n",
-       "1          0        0          1       1              0              0   \n",
-       "2          0        1          0       0              0              0   \n",
-       "3          1        0          0       0              0              0   \n",
-       "4          1        0          1       0              0              0   \n",
-       "...      ...      ...        ...     ...            ...            ...   \n",
-       "5376       1        0          0       0              0              1   \n",
-       "5377       0        0          0       0              1              0   \n",
-       "5378       0        0          0       0              0              1   \n",
-       "5379       0        1          0       0              1              0   \n",
-       "5380       1        0          0       0              0              1   \n",
+       "      drama  comedy  thriller  action  romance  adventure  family  \\\n",
+       "0         0       1         0       0        0          0       1   \n",
+       "1         0       0         0       0        0          1       1   \n",
+       "2         1       1         0       0        1          0       0   \n",
+       "3         1       0         1       1        0          0       0   \n",
+       "4         0       0         1       1        0          1       0   \n",
+       "...     ...     ...       ...     ...      ...        ...     ...   \n",
+       "5376      1       1         0       1        0          0       0   \n",
+       "5377      0       1         0       0        0          0       0   \n",
+       "5378      1       1         0       0        0          0       0   \n",
+       "5379      1       0         0       0        1          0       0   \n",
+       "5380      0       1         0       1        0          0       0   \n",
        "\n",
-       "      release_1990s  release_1980s_below  overview_vader  tagline_vader  \n",
-       "0                 1                    0          0.1280         0.0000  \n",
-       "1                 1                    0         -0.4588         0.5411  \n",
-       "2                 1                    0          0.8860         0.5812  \n",
-       "3                 1                    0         -0.8750        -0.5423  \n",
-       "4                 1                    0          0.5106        -0.5267  \n",
-       "...             ...                  ...             ...            ...  \n",
-       "5376              0                    0          0.6712         0.0000  \n",
-       "5377              0                    0          0.0000         0.0000  \n",
-       "5378              0                    0          0.7037         0.0000  \n",
-       "5379              0                    0          0.0000         0.0000  \n",
-       "5380              0                    0          0.4106         0.0000  \n",
+       "      release_2010s  release_2000s  release_1990s  release_1980s_below  \\\n",
+       "0                 0              0              1                    0   \n",
+       "1                 0              0              1                    0   \n",
+       "2                 0              0              1                    0   \n",
+       "3                 0              0              1                    0   \n",
+       "4                 0              0              1                    0   \n",
+       "...             ...            ...            ...                  ...   \n",
+       "5376              0              1              0                    0   \n",
+       "5377              1              0              0                    0   \n",
+       "5378              0              1              0                    0   \n",
+       "5379              1              0              0                    0   \n",
+       "5380              0              1              0                    0   \n",
        "\n",
-       "[5381 rows x 22 columns]"
+       "      overview_vader  tagline_vader  \n",
+       "0             0.1280         0.0000  \n",
+       "1            -0.4588         0.5411  \n",
+       "2             0.8860         0.5812  \n",
+       "3            -0.8750        -0.5423  \n",
+       "4             0.5106        -0.5267  \n",
+       "...              ...            ...  \n",
+       "5376          0.6712         0.0000  \n",
+       "5377          0.0000         0.0000  \n",
+       "5378          0.7037         0.0000  \n",
+       "5379          0.0000         0.0000  \n",
+       "5380          0.4106         0.0000  \n",
+       "\n",
+       "[5381 rows x 24 columns]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,12 +1110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save\n",
-    "movies_metadata.to_csv(os.path.join(tmdb_path, \"movies_metadata_processed.csv\"))"
+    "movies_metadata.to_csv(os.path.join(tmdb_path, \"movies_metadata_processed.csv\"), index=False)"
    ]
   },
   {
