started zero imputation

--- a/poisson-matrix-factorization_playground.ipynb
+++ b/poisson-matrix-factorization_playground.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Probabilistic Matrix Factorization using the MovieLens Dataset"
+    "## Poisson Matrix Factorization using the MovieLens Dataset"
    ]
   },
   {
