--- a/poppc-for-bayesian-models.ipynb
+++ b/poppc-for-bayesian-models.ipynb
@@ -265,11 +265,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we implement the Probabilistic Matrix Factorization (PMF) model, and train the model using the train dataset. In our case, PMF 's objective is to fill in the missing values of the movie ratings matrix $R$, which is done by maximizing the following MAP objective function.\n",
+    "Now we implement the Probabilistic Matrix Factorization (PMF) model, which is the simplest \"probabilistic\" MF model. \n",
     "\n",
-    "$L = - \\Sigma_{(i,j)\\in \\Omega}\\frac{1}{2\\sigma^2}(R_{ij}-u_i^Tv_j)^2-\\Sigma_{i=1}^{N_u}\\frac{\\lambda}{2}||u_i||^2-\\Sigma_{j=1}^{N_v}\\frac{\\lambda}{2}||v_j||^2$,\n",
+    "Given a rating matrix $R$,  user matrix $U$, movie matrix $V$, and variance $\\sigma$, the likelihood of PMF is:\n",
     "\n",
-    "where $u_i$ is the $i$th user vector, $v_j$ the $j$th movie vector, $N_u$ the number of users, $N_v$ the number of movies, $\\Omega$ the set of $(i,j)$s that have a rating in the matrix $R$, $\\sigma^2$ the variance of $R_{ij} \\sim N(u_i^Tv_j, \\sigma^2)$. Therefore, each rating in $R$ are assumed to be normally distributed. Also, note that the each user vector $u_i$ and movie vector $v_j$ are initialized from the distribution $N(\\mu, \\lambda^{-1}I)$, where $u$ is a $i \\times k$ matrix and $v$ is a $j \\times k$ matrix. (Here we set $\\mu = 0, \\lambda= 1$)"
+    "\\begin{equation}\n",
+    "    p(R_{ij} | U_i, V_j, \\mu, \\sigma^2) = N(R_{ij}| U_i, V_j, \\mu, \\sigma^2)\n",
+    "\\end{equation}\n",
+    "\n",
+    "where the user and feature vectors are given Gaussian priors:\n",
+    "\\begin{equation}\n",
+    "    p(U|\\mu_U, \\sigma_U^2) = \\prod_{i=1}^{N_U}N(U_i|\\mu_U,\\sigma_U^2I) \\\\\n",
+    "    p(V|\\mu_V, \\sigma_V^2) = \\prod_{i=1}^{N_V}N(V_i|\\mu_V,\\sigma_V^2I)\n",
+    "\\end{equation}\n",
+    "\n",
+    "We set $\\mu_U=\\mu_V=0$ and $\\sigma_U=\\sigma_V=1$ here for simplicity.\n",
+    "\n",
+    "For $k$ (represents latent factors of user and feature vectors), we chose $k=10$ for all MF models in this section."
    ]
   },
   {
@@ -300,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use NUTS MCMC to approximate the posterior distribution of $p(u,v|R,\\lambda, \\mu, \\sigma)$ (following the above objective criterion). Then we take the average of the sampled 100 $u^Tv$s as the predicted ratings of the movies given by users. Note that this is how inference is done for the rest of the MF section."
+    "We use NUTS MCMC to approximate the posterior distribution of $p(u,v|R,\\lambda, \\mu, \\sigma)$. Then we take the average of the sampled 100 $u^Tv$s as the predicted ratings of the movies given by users. Note that this is how inference is done for the rest of the MF section."
    ]
   },
   {
@@ -490,11 +502,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In PMF, each user and movie had the same Normal distribution prior with constant mean and variance. In BMF, a prior is set on the mean and variance of the Normal distributions of each user and each movie. This allows more flexibility in representing the different preferences of users and rating trends of movies using the decomposed matrices, hopefully producing more balanced predictions. The goal of BPMF is to infer the following posterior distribution:\n",
+    "In PMF, each user and movie had the same Normal distribution prior with constant mean and variance. In BMF, a prior distribution is set on the mean and variance of the Normal distributions of each user and each movie. This allows more flexibility in representing the different preferences of users and rating trends of movies using the decomposed matrices, producing more balanced predictions. \n",
     "\n",
-    "$p(u,v|R, \\mu_{user}, \\sigma_{user}, \\mu_{movie}, \\sigma_{movie}, \\alpha_{user}, \\beta_{user}, \\alpha_{movie}, \\beta_{movie})$,\n",
+    "\\begin{equation}\n",
+    "    p(R_{ij} | U_i, V_j, \\mu, \\sigma^2) = N(R_{ij}| U_i, V_j, \\mu, \\sigma^2)\n",
+    "\\end{equation}\n",
     "\n",
-    "where $\\mu_{user}, \\sigma_{user}, \\mu_{movie}, \\sigma_{movie}, \\alpha_{user}, \\beta_{user}, \\alpha_{movie}, \\beta_{movie}$ are hyperparameters for the priors of the mean and variance of the Normal distribution s.t. the prior distribution of the mean is a Normal distribution and the prior distribution of the variance is an Inverse Gamma distribution (in the paper it is a Gaussian-Wishart distribution, but used this for simplicity of implementation)."
+    "where\n",
+    "\\begin{equation}\n",
+    "    p(U|\\mu_U, \\sigma_U^2) = \\prod_{i=1}^{N_U}N(U_i|\\mu_U,\\sigma_U^2I) \\\\\n",
+    "    p(V|\\mu_V, \\sigma_V^2) = \\prod_{i=1}^{N_V}N(V_i|\\mu_V,\\sigma_V^2I)\n",
+    "    \n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    N(U_i|\\mu_U, \\sigma_U) N(V_j|\\mu_V, \\sigma_V)N(\\mu, \\sigma^2|\\phi, \\tau, \\alpha, \\beta)N(\\phi, \\tau)InvGam(\\alpha,\\beta)\n",
+    "\\end{equation}\n",
+    "\n",
+    "where a normal distribution with parameters $\\phi$ and $\\tau$ is the prior for $\\mu$, and an inverse gamma distribution with parameteres $\\alpha$ and $\\beta$ is the prior for $\\sigma^2$. Note that \n",
+    "\n",
+    "Here, we set $\\phi=0$, $\\tau=1$, $\\alpha=1$, $\\beta=1$."
    ]
   },
   {
@@ -681,7 +709,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In PoiMF, a Poisson distribution is assumed to generate the ratings in the matrix. The elements of the two decomposed matrices are assumed to be Gamma distributions so that the input to the Poisson distribution will always be positive. PoiMF has almost the same posterior distribution as the BPMF, except that the assumed distributions are Poisson and Gamma, with the hyperparameters corresponding to those distributions."
+    "In PoiMF, a Poisson distribution is assumed to generate the ratings in the matrix. PoiMF has almost the same posterior distribution as the BPMF, except that the assumed distributions are Poisson and Gamma, with the hyperparameters corresponding to those distributions.\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    p(R_{ij} | U_i, V_j, \\Theta, \\beta, a, b, c, d) = Poisson(R_{ij}|U_i, V_j, \\Theta, \\beta, a, b, c, d) Gamma(U_i|\\Theta)Gamma(V_j|\\beta)Gamma(\\Theta| a, b)Gamma(\\beta | c, d)\n",
+    "\\end{equation}\n",
+    "\n",
+    "where a Gamma distribution with parameters $a, b$  is the prior for $\\Theta$ and a Gamma distribution with parameters $c, d$ is the prior for $\\beta$. "
    ]
   },
   {
