fixed equations for MF

--- a/poppc-for-bayesian-models.ipynb
+++ b/poppc-for-bayesian-models.ipynb
@@ -276,7 +276,7 @@
     "where the user and feature vectors are given Gaussian priors:\n",
     "\\begin{equation}\n",
     "    p(U|\\mu_U, \\sigma_U^2) = \\prod_{i=1}^{N_U}N(U_i|\\mu_U,\\sigma_U^2I) \\\\\n",
-    "    p(V|\\mu_V, \\sigma_V^2) = \\prod_{i=1}^{N_V}N(V_i|\\mu_V,\\sigma_V^2I)\n",
+    "    p(V|\\mu_V, \\sigma_V^2) = \\prod_{j=1}^{N_V}N(V_j|\\mu_V,\\sigma_V^2I)\n",
     "\\end{equation}\n",
     "\n",
     "We set $\\mu_U=\\mu_V=0$ and $\\sigma_U=\\sigma_V=1$ here for simplicity.\n",
@@ -509,20 +509,15 @@
     "\\end{equation}\n",
     "\n",
     "where\n",
-    "\\begin{equation}\n",
-    "    p(U|\\mu_U, \\sigma_U^2) = \\prod_{i=1}^{N_U}N(U_i|\\mu_U,\\sigma_U^2I) \\\\\n",
-    "    p(V|\\mu_V, \\sigma_V^2) = \\prod_{i=1}^{N_V}N(V_i|\\mu_V,\\sigma_V^2I)\n",
-    "    \n",
-    "\\end{equation}\n",
-    "\n",
     "\n",
     "\\begin{equation}\n",
-    "    N(U_i|\\mu_U, \\sigma_U) N(V_j|\\mu_V, \\sigma_V)N(\\mu, \\sigma^2|\\phi, \\tau, \\alpha, \\beta)N(\\phi, \\tau)InvGam(\\alpha,\\beta)\n",
-    "\\end{equation}\n",
-    "\n",
-    "where a normal distribution with parameters $\\phi$ and $\\tau$ is the prior for $\\mu$, and an inverse gamma distribution with parameteres $\\alpha$ and $\\beta$ is the prior for $\\sigma^2$. Note that \n",
-    "\n",
-    "Here, we set $\\phi=0$, $\\tau=1$, $\\alpha=1$, $\\beta=1$."
+    "    p(U_i|\\mu_{U_i}, \\sigma_{U_i}^2) = N(U_i|\\mu_{U_i},\\sigma_{U_i}^2I) \\\\\n",
+    "    p(V_j|\\mu_{V_j}, \\sigma_{V_j}^2) =N(V_j|\\mu_{V_j},\\sigma_{V_j}^2I) \\\\\n",
+    "    p(\\mu_{U_i}) = N(0,1) \\\\\n",
+    "    p(\\sigma^2_{U_i}) = InvGam(1,1) \\\\\n",
+    "    p(\\mu_{V_j}) = N(0,1) \\\\\n",
+    "    p(\\sigma^2_{V_j}) = InvGam(1,1) \\\\\n",
+    "\\end{equation}"
    ]
   },
   {
@@ -712,10 +707,16 @@
     "In PoiMF, a Poisson distribution is assumed to generate the ratings in the matrix. PoiMF has almost the same posterior distribution as the BPMF, except that the assumed distributions are Poisson and Gamma, with the hyperparameters corresponding to those distributions.\n",
     "\n",
     "\\begin{equation}\n",
-    "    p(R_{ij} | U_i, V_j, \\Theta, \\beta, a, b, c, d) = Poisson(R_{ij}|U_i, V_j, \\Theta, \\beta, a, b, c, d) Gamma(U_i|\\Theta)Gamma(V_j|\\beta)Gamma(\\Theta| a, b)Gamma(\\beta | c, d)\n",
+    "    p(R_{ij} | U_i, V_j, e_i, n_j) = Poisson(R_{ij}|U_i, V_j, e_i, n_j) \n",
     "\\end{equation}\n",
     "\n",
-    "where a Gamma distribution with parameters $a, b$  is the prior for $\\Theta$ and a Gamma distribution with parameters $c, d$ is the prior for $\\beta$. "
+    "where \n",
+    "\\begin{equation}\n",
+    "    p(U_i| e_i) = Gamma(1, e_i) \\\\\n",
+    "    p(V_j| n_j) = Gamma(1, n_j) \\\\\n",
+    "    p(e_i) = Gamma(1,1) \\\\\n",
+    "    p(n_j) = Gamma(1,1)\n",
+    "\\end{equation}"
    ]
   },
   {
