--- a/poppc-for-bayesian-models.ipynb
+++ b/poppc-for-bayesian-models.ipynb
@@ -18,37 +18,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Posterior Predictive Checks\n",
-    "\n",
-    "PPCs are a powerful model-checking procedure that performs the following: simulate replicated data from the posterior predictive distribution, compute a discrepancy that measures \"relevance\", and compare the distance between the discrepancy of observed and replicated data. Discrepancies are functions of the data that measures something that you want to see in the distributions (ex. mean, median, range, log-likelihood, etc.)\n",
-    "\n",
-    "More formally, A PPC is defined by:\n",
-    "\\begin{equation}\n",
-    "    PPC(x^{obs}; g, d) = E[g(d(x^{rep}, \\theta), d(x^{obs}, \\theta)) | x^{obs}]\n",
-    "\\end{equation}\n",
-    "Where $d(y, \\theta)$ is the discrepancy function and $g(\\cdot, \\cdot)$ is a distance function."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Population Predictive Checks\n",
-    "\n",
-    "__Issue__: PPCs tend to overfit due to \"double dipping\" the data, i.e. we compute the discrepancy of replicated data based on latent variables we obtained from the observed data.\n",
-    "\n",
-    "__Solution__: Population Predictive Checks. Use Bootstrap or Cross-validation to obtain $x^{new}$ to model the true distribution F. This follows the intuition: “If my model is good (in a relevant way) then data drawn from the posterior predictive distribution of a group will look like data from the true population of that group.”\n",
-    "\n",
-    "A POP-PC is defined by\n",
-    "\\begin{equation}\n",
-    "    POP-PC(x^{obs}, F; g, d) = E[g(d(x^{rep}, \\theta), d(x^{new}, \\theta)) | x^{obs}, F]\n",
-    "\\end{equation}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Data"
    ]
   },
@@ -1486,8 +1455,7 @@
    "source": [
     "### Criticism\n",
     "\n",
-    "__Results:__ After looking at the assignments of each movie using the trained GMM, we found that there is no significant pattern in genres/release periods, i.e. this is an issue of *non-identifiability*. However, the components of $\\mu_k, \\Sigma_k$ seem to capture the general distribution/shape of the data well looking at the trace plots. Most of the density in the GMM is clustered within a single component. \n",
-    "\n"
+    "__Results:__ After looking at the assignments of each movie using the trained GMM, we found that there is no significant pattern in genres/release periods, i.e. this is an issue of *non-identifiability*. However, the components of $\\mu_k, \\Sigma_k$ seem to capture the general distribution/shape of the data well looking at the trace plots. Most of the density in the GMM is clustered within a single component. "
    ]
   },
   {
@@ -1713,23 +1681,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "### References"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Population Predictive Checks https://arxiv.org/abs/1908.00882\n",
-    "- MovieLens Dataset https://www.kaggle.com/rounakbanik/the-movies-dataset\n",
-    "- Probabilistic Matrix Factorization https://papers.nips.cc/paper/3208-probabilistic-matrix-factorization.pdf\n",
-    "- Bayesian Probabilistic Matrix Factorization using Markov Chain Monte Carlo https://www.cs.toronto.edu/~amnih/papers/bpmf.pdf\n",
-    "- Scalable Recommendation with Poisson Factorization https://arxiv.org/pdf/1311.1704.pdf\n",
-    "- NUTS http://www.stat.columbia.edu/~gelman/research/published/nuts.pdf"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
